src/objects/Web_HR_Absence__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_No__c</fullName>
        <label>Employee No.</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_s_Comments__c</fullName>
        <label>Manager&apos;s Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Days__c</fullName>
        <label>No. of Days</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Applied</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Study Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncertified Sick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Sick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maternity Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Unpaid Maternity Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force Majeure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paternity Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compassionate Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funeral Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bereavement Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statutory Maternity Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carers Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Leave</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Your_Name__c</fullName>
        <label>Your Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Web HR-Absence</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WHR-{00000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web HR-Absences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Return_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Return_Date__c   &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>Return_Date__c</errorDisplayField>
        <errorMessage>ERROR - Return Date must be later than Start Date</errorMessage>
    </validationRules>
</CustomObject>